<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:gravity="center_horizontal"
    android:paddingTop="0dp"
    android:paddingBottom="0dp">

    <!-- Main content with green border -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#1F2626"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <!-- Section with dissolving #051D26 background -->

        <ImageView
            android:layout_width="450dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/evp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:background="@drawable/dissolve_section_background"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Plug-In"
                android:textColor="@color/white"
                android:textSize="40sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="350px"
                android:paddingTop="0dp"
                android:text="by Nippon"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginRight="00px"
                android:text="@string/login_to_account"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="100dp"
            android:text="@string/enter_email"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/loginEmail"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/black_button_green_border"
            android:hint="@string/enter_email_hint"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="#B0B3B8" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginRight="81dp"
            android:text="@string/enter_password"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/black_button_green_border"
            android:hint="@string/enter_password_hint"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textColorHint="#888888" />

        <TextView
            android:id="@+id/forgotPasswordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="300dp"
            android:layout_height="46dp"
            android:background="@drawable/dark_button_background"
            android:text="Login"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/registerLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="1dp"
            android:paddingTop="5dp"
            android:paddingBottom="8dp"
            android:text="@string/new_user_register"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/googleSignInBtn"
            android:layout_width="300dp"
            android:layout_height="46dp"
            android:background="@drawable/dark_button_background"
            android:text="Sign-up with Google"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>











